--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <div>
         <div class="image-text">
-            <img src="\Google_2015_logo.svg.webp" alt="Image">
+            <img src="Google_2015_logo.svg.webp" alt="Image">
             <h2>LET US DO THE MATH</h2>
         </div>
 
